force-app/main/default/objects/Contact/fields/Scholarship_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Awarded__c</fullName>
    <label>Scholarship Awarded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>