force-app/main/default/objects/Contact/fields/SCORM_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>SCORM_Compatibility__c</fullName>
    <label>SCORM Compatibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>