force-app/main/default/objects/Contact/fields/Secondary_Subject_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Subject_Expertise__c</fullName>
    <label>Secondary Subject Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>