force-app/main/default/objects/Contact/fields/Skill_Gap_Identified__c.field-meta.xml
<CustomField>
    <fullName>Skill_Gap_Identified__c</fullName>
    <label>Skill Gap Identified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>