force-app/main/default/objects/Contact/fields/SOC2_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>SOC2_Compliance_Status__c</fullName>
    <label>SOC2 Compliance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>