force-app/main/default/objects/Contact/fields/Software_Licenses_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Software_Licenses_Assigned__c</fullName>
    <label>Software Licenses Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>