force-app/main/default/objects/Contact/fields/Speaking_Engagements__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagements__c</fullName>
    <label>Speaking Engagements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>