force-app/main/default/objects/Contact/fields/Sponsor_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Organization__c</fullName>
    <label>Sponsor Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>