force-app/main/default/objects/Contact/fields/SSO_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SSO_Enabled__c</fullName>
    <label>SSO Enabled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>