force-app/main/default/objects/Contact/fields/Standardized_Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Test_Score__c</fullName>
    <label>Standardized Test Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>