force-app/main/default/objects/Contact/fields/Strategic_Importance__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Importance__c</fullName>
    <label>Strategic Importance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>