force-app/main/default/objects/Contact/fields/Student_Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Student_Pass_Rate__c</fullName>
    <label>Student Pass Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>