force-app/main/default/objects/Contact/fields/Succession_Plan_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Succession_Plan_Candidate__c</fullName>
    <label>Succession Plan Candidate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>