force-app/main/default/objects/Contact/fields/Support_SLA_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA_Tier__c</fullName>
    <label>Support SLA Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>