force-app/main/default/objects/Contact/fields/Survey_Participation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Participation__c</fullName>
    <label>Survey Participation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>