force-app/main/default/objects/Contact/fields/Syllabus_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Syllabus_Approval_Status__c</fullName>
    <label>Syllabus Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>