force-app/main/default/objects/Contact/fields/Syllabus_Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Syllabus_Quality_Rating__c</fullName>
    <label>Syllabus Quality Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>