force-app/main/default/objects/Contact/fields/System_Access_Role__c.field-meta.xml
<CustomField>
    <fullName>System_Access_Role__c</fullName>
    <label>System Access Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>