force-app/main/default/objects/Contact/fields/System_Warning_Flag__c.field-meta.xml
<CustomField>
    <fullName>System_Warning_Flag__c</fullName>
    <label>System Warning Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>