force-app/main/default/objects/Contact/fields/Tax_Exempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Status__c</fullName>
    <label>Tax Exempt Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>