force-app/main/default/objects/Contact/fields/Tech_Support_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Tech_Support_Tickets__c</fullName>
    <label>Tech Support Tickets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>