force-app/main/default/objects/Contact/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>