force-app/main/default/objects/Contact/fields/Territory_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Territory_Assigned__c</fullName>
    <label>Territory Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>