force-app/main/default/objects/Contact/fields/Thesis_Topic__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Topic__c</fullName>
    <label>Thesis Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>