force-app/main/default/objects/Contact/fields/Title_IX_Certification__c.field-meta.xml
<CustomField>
    <fullName>Title_IX_Certification__c</fullName>
    <label>Title IX Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>