force-app/main/default/objects/Contact/fields/Total_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Earned__c</fullName>
    <label>Total Credits Earned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>