force-app/main/default/objects/Contact/fields/Total_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Generated__c</fullName>
    <label>Total Revenue Generated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>