force-app/main/default/objects/Contact/fields/Training_Provided__c.field-meta.xml
<CustomField>
    <fullName>Training_Provided__c</fullName>
    <label>Training Provided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>