force-app/main/default/objects/Contact/fields/Tuition_Balance__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Balance__c</fullName>
    <label>Tuition Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>