force-app/main/default/objects/Contact/fields/Tutoring_Requested__c.field-meta.xml
<CustomField>
    <fullName>Tutoring_Requested__c</fullName>
    <label>Tutoring Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>