force-app/main/default/objects/Contact/fields/Uptime_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Uptime_Guarantee__c</fullName>
    <label>Uptime Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>