force-app/main/default/objects/Contact/fields/Vendor_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Relationship_Status__c</fullName>
    <label>Vendor Relationship Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>