force-app/main/default/objects/Contact/fields/Veterans_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Benefits__c</fullName>
    <label>Veterans Benefits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>