force-app/main/default/objects/Contact/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <label>Visa Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>