force-app/main/default/objects/Contact/fields/Work_Study_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Work_Study_Eligible__c</fullName>
    <label>Work Study Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>