force-app/main/default/objects/Contact/fields/Years_as_Partner__c.field-meta.xml
<CustomField>
    <fullName>Years_as_Partner__c</fullName>
    <label>Years as Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>