force-app/main/default/objects/Contact/recordTypes/Corporate_Employee.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Employee</fullName>
    <active>true</active>
    <description>B2B contacts at Corporate Clients</description>
    <label>Corporate Employee</label>
</RecordType>