force-app/main/default/objects/Contact/recordTypes/Instructor.recordType-meta.xml
<RecordType>
    <fullName>Instructor</fullName>
    <active>true</active>
    <description>Teachers and course creators</description>
    <label>Instructor</label>
</RecordType>