force-app/main/default/objects/Contact/recordTypes/Partner_Representative.recordType-meta.xml
<RecordType>
    <fullName>Partner_Representative</fullName>
    <active>true</active>
    <description>Contacts at Training Providers or Vendors</description>
    <label>Partner Representative</label>
</RecordType>