force-app/main/default/objects/Contact/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>Learners taking courses</description>
    <label>Student</label>
</RecordType>